--- a/source/template/common/_menu.jade
+++ b/source/template/common/_menu.jade
@@ -8,8 +8,7 @@
 
 .l-overlap.js-hide
 	.l-overlap__top-button
-		span.m-menu-toggle.m-menu-toggle_close
-			a(href="#").m-menu-toggle__link
+		a(href="#").m-menu-toggle.m-menu-toggle_close
 	ul.m-menu
 		each title, address in menu
 			li.m-menu__item
