--- a/source/template/works.jade
+++ b/source/template/works.jade
@@ -32,21 +32,22 @@ html
 					li.m-comment__item
 						.m-comment__userpic.m-comment__userpic_1
 						.m-comment__comment Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-						.m-comment__author-name Ковальчук Дмитрий
-						.m-comment__author-description основатель Loftschool
+						.m-comment__comment-author Ковальчук Дмитрий
+						.m-comment__comment-description основатель Loftschool
 					li.m-comment__item
 						.m-comment__userpic.m-comment__userpic_2
 						.m-comment__comment Этот код выдержет любые испытания. Только пожалуйста, не загружается сайт на слишком старых браузерах!
-						.m-comment__author-name Зар Захаров
-						.m-comment__author-description главный преподаватель
-				.m-recalls__info
-					h2.m-title.m-title_2.m-title_light Связаться со мной
-					.m-input
-						input(type="text", placeholder="Ваше имя").m-input__input.m-input__input_special
-					.m-input
-						input(type="text", placeholder="Ваш email").m-input__input.m-input__input_special
-					.m-textarea
-						textarea(placeholder="Ваше сообщение").m-textarea__textarea.m-textarea__textarea_special
+						.m-comment__comment-author Зар Захаров
+						.m-comment__comment-description главный преподаватель
+				.m-recalls__form
+					.m-contact-form
+						h2.m-title.m-title_2.m-title_light Связаться со мной
+						.m-input
+							input(type="text", placeholder="Ваше имя").m-input__input.m-input__input_special
+						.m-input
+							input(type="text", placeholder="Ваш email").m-input__input.m-input__input_special
+						.m-textarea
+							textarea(placeholder="Ваше сообщение").m-textarea__textarea.m-textarea__textarea_special
 					ul.m-tabs
 						li.m-tabs__item
 							a(href="#").m-tabs__link Отправить
