--- a/source/template/common/_footer.jade
+++ b/source/template/common/_footer.jade
@@ -1,18 +1,22 @@
 footer.l-footer
-   .l-footer_big
-      section.m-footer-section.m-footer-section_description
-         span.m-message Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
-      section.m-footer-section.m-footer-section_nav
-         nav.m-nav
-            ul.m-nav__list
-               each title, address in menu
-                  li.m-nav__item
-                     a(href="#{address}.html").m-nav__link= title
-         include _socials
-      section.m-footer-section.m-footer-section_contacts
-         ul.m-contacts__list.m-contacts__list
-            include _contacts
-            each contact in contacts
-               li.m-contacts__item= contact
-   .l-footer_small
-      span.m-message.m-message_centered © Константин Житков | Создано с любовью в LoftSchool | 2016
+	.l-footer_big
+		section.m-footer-section.m-footer-section_description
+			span.m-message Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool.
+		section.m-footer-section.m-footer-section_nav
+			nav.m-nav
+				ul.m-nav__list
+					each title, address in menu
+						li.m-nav__item
+							a(href="#{address}.html").m-nav__link= title
+			include _socials
+			ul.m-welcome__social
+				each address, social in socials
+					li.m-welcome__social-item(class="m-social__item_" + social)
+						a(href="#{address}").m-welcome__social-link
+		section.m-footer-section.m-footer-section_contacts
+			ul.m-contacts__list.m-contacts__list
+				include _contacts
+				each contact in contacts
+					li.m-contacts__item= contact
+	.l-footer_small
+		span.m-message.m-message_centered © Константин Житков | Создано с любовью в LoftSchool | 2016
