--- a/source/template/common/_header_special.jade
+++ b/source/template/common/_header_special.jade
@@ -1,11 +1,14 @@
 header.l-header
-	.l-header__social
-		include _socials
+	include _socials
+	ul.l-header__social
+		each address, social in socials
+			li.l-header__social-item(class="l-header__social-item_" + social)
+				a(href="#{address}").l-header__social-link
 	.l-header__top-button
-		span.m-menu-toggle.m-menu-toggle_open
-	.l-header__menu-button
-	.l-header__user-info
-		.m-user-info
-			.m-user-info__userpic
-			.m-user-info__title Блог
-			.m-user-info__description Статьи, которые я написал
+		a(href="#").m-menu-toggle.m-menu-toggle_open
+	.l-header__page-info
+		.m-page-info
+			.m-page-info__userpic
+				.m-userpic
+			.m-page-info__title Блог
+			.m-page-info__description Статьи, которые я написал
