--- a/source/style/common/modules.scss
+++ b/source/style/common/modules.scss
@@ -52,15 +52,26 @@
 		&::before {
 			content: ' ';
 			display: block;
-			width: 190px;
-			height: 123px;
 			position: absolute;
 			top: -27px;
 			left: 50%;
 			transform: translate3D(-50%, 0, 0);
 			background: url("../img/stars2.svg") no-repeat center center;
+			background-size: cover;
 			opacity: 0.1;
 			z-index: -1;
+			@include desktop {
+				width: 19rem;
+				height: 12.3rem;
+			}
+			@include tablet {
+				width: 15.4rem;
+				height: 10rem;
+			}
+			@include phone {
+				width: 12rem;
+				height: 7.77rem;
+			}
 		}
 	}
 	&_2 {
@@ -479,15 +490,16 @@
 	font-size: 1.6rem;
 	font-weight: 500;
 	line-height: 2.25;
-	text-decoration: none;
 	z-index: 100;
 	&:link, &:visited {
 		border: 1px solid rgb(255, 255, 255);
+		text-decoration: none;
 		color: #fff;
 	}
 	&:hover, &:active {
 		border-color: transparent;
 		background-color: rgb(8, 60, 150);
+		text-decoration: none;
 		color: #fff;
 	}
 	@include phone {
@@ -700,10 +712,12 @@
 .m-button {
 	display: inline-block;
 	position: relative;
-	padding: 12px 18px;
+	padding: 0.3rem 2.8rem;
 	background-color: rgb(0, 76, 209);
-	color: #fff;
+	font-size: 1.6rem;
 	font-weight: 500;
+	line-height: 2.25;
+	color: #fff;
 	&:link, &:visited, &:hover, &:active {
 		text-decoration: none;
 	}
@@ -715,6 +729,11 @@
 		height: 14px;
 		background: url('../img/link.svg') no-repeat center center;
 		background-size: 14px;
+	}
+	@include phone {
+		padding: 0.7rem 2rem;
+		font-size: 1.4rem;
+		line-height: 1.71429;
 	}
 }
 
@@ -1105,19 +1124,26 @@
 .m-slider {
 	position: relative;
 	display: block;
-	height: 130vh;
+	height: 100vh;
+	min-height: 65rem;
 	background-color: #f2f0e8;
 	overflow: auto;
 	&__description {
 		position: relative;
 		display: block;
-		width: 50%;
-		height: 100%;
 		float: left;
 		text-align: center;
-		@media screen and (max-width: 768px) {
-			height: 50vh;
+		@include desktop {
+			width: 50%;
+			height: 100%;
+		}
+		@include tablet {
 			width: 100%;
+			height: 28%;
+		}
+		@include phone {
+			width: 100%;
+			height: 40%;
 		}
 	}
 	&__preview {
@@ -1126,12 +1152,20 @@
 		width: 50%;
 		height: 70%;
 		float: right;
-		background: url('../img/project1.jpg') no-repeat center center;
-		background-size: 80%;
-		@media screen and (max-width: 768px) {
+		background: url('../img/project1.png') no-repeat center center;
+		background-size: contain;
+		@include desktop {
+			width: 50%;
+			height: 70%;
+		}
+		@include tablet {
+			width: 100%;
+			height: 50%;
+		}
+		@include phone {
 			float: left;
 			width: 100%;
-			height: 50vh;
+			height: 45%;
 		}
 	}
 	&__controls {
@@ -1141,10 +1175,18 @@
 		height: 30%;
 		float: right;
 		overflow: auto;
-		@media screen and (max-width: 768px) {
+		@include desktop {
+			width: 50%;
+			height: 30%;
+		}
+		@include tablet {
+			width: 100%;
+			height: 22%;
+		}
+		@include phone {
 			float: left;
 			width: 100%;
-			height: 30vh;
+			height: 15%;
 		}
 		&_left {
 			position: relative;
@@ -1154,8 +1196,8 @@
 			height: 100%;
 			background-color: #ccc;
 			font-size: 30px;
-			background: url('../img/project1.jpg') no-repeat center center;
-			background-size: 60%;
+			background: url('../img/project1.png') no-repeat center center;
+			background-size: contain;
 		}
 		&_right {
 			position: relative;
@@ -1166,8 +1208,8 @@
 			background-color: #ccc;
 			color: #fff;
 			font-size: 30px;
-			background: url('../img/project1.jpg') no-repeat center center;
-			background-size: 60%;
+			background: url('../img/project1.png') no-repeat center center;
+			background-size: contain;
 		}
 		&_button {
 			position: relative;
@@ -1204,21 +1246,29 @@
 }
 
 .m-project {
+	width: 100%;
+	padding: 2rem;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	&__description {
 		display: block;
-		margin-bottom: 50px;
 		font-family: 'Roboto', sans-serif;
-		font-size: 16px;
+		font-size: 1.6rem;
 		font-weight: 500;
 		color: #083c96;
+		@include desktop {
+			margin-bottom: 6rem;
+		}
+		@include tablet {
+			margin-bottom: 3rem;
+		}
+		@include phone {
+			margin-bottom: 2rem;
+		}
 	}
 }
-
-/////
 
 .m-welcome {
 	margin: 0 auto;
