--- a/source/template/common/_contacts.jade
+++ b/source/template/common/_contacts.jade
@@ -1,7 +1,7 @@
 -
 	var contacts = {
 		'skype' : 'zhitkovkostya',
-		'phone' : '+7 (981) 862-75-00',
-		'email' : 'zhitkovkostya@gmail.com',
+		'tel' : '+79818627500',
+		'mailto' : 'zhitkovkostya@gmail.com',
 		'address' : 'Санкт-Петербург'
 	}
