--- a/source/template/about.jade
+++ b/source/template/about.jade
@@ -12,7 +12,7 @@ html
 			h1.m-title.m-title_1 Обо мне
 			img(src="assets/img/userpic.jpg").m-img.m-img_responsive
 			h2.m-title.m-title_2 Кто я
-			p.m-paragraph Я веб-разработчик из Санкт-Петербурга. Мне 21 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
+			p.m-paragraph Я веб-разработчик из Санкт-Петербурга. Мне 21 год. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
 			p.m-paragraph Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
 		section.l-section.l-section_right
 			h2.m-title.m-title_2 Чем я могу быть <br> вам полезен
@@ -28,6 +28,7 @@ html
 							each contact, id in contacts
 								li.m-contacts-big__item
 									img(src='assets/img/'+id+'.svg').m-contacts-big__icon
-									span.m-contacts-big__title= contact
+									a(href=id + ": " + contact).m-contacts-big__link= contact
 		include common/_footer
-	script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmH97MMfOdrC8s7zd4E8PZJkGQn--WR0")
+		script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbmH97MMfOdrC8s7zd4E8PZJkGQn--WR0")
+		script
